# KannadaMNIST

./: LICENSE.txt  README.md  config.yaml  evaluate.py  model.py  pyproject.toml  requirements.txt  submission.csv  supervisor.py  train.py  utils.py
data/: Info
log/: train_data_round0.csv  train_data_round1.csv  train_data_round2.csv  val_data_round0.csv  val_data_round2.csv
models/: model-round0.pth  model-round1.pth  model-round2.pth
