[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KannadaMNIST"
version = "0.0.1"
authors = [
  { name="Elena Patyukova", email="example@google.com" },
]
description = "Kannada handwritten digits classification model"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/epatyukova/KannadaMNIST"
